# shared-bucket-poc

./: Cargo.toml  Makefile  NOTES.md  README.md
.github/workflows/: build.yml  release.yml
src/: lib.rs
