[package]
name = "shared-bucket-poc"
version = "0.1.0"
authors = [ "" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "shared_bucket_poc"

[dependencies]
futures = "0.3"
form_urlencoded = "1.0"
wasmbus-rpc = "0.8.2"
wasmcloud-interface-httpserver = "0.5"
wasmcloud-interface-keyvalue = "0.6.0"
serde_json ="1.0"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
